--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -10,7 +10,8 @@ header {
     top: 0%;
     left: 0%;
     background-color: var(--light-green);
-    z-index: 2;
+    z-index: 0;
+    border-radius: 5rem;
     box-shadow: 0 0 20px 0 rgba(144, 174, 205, 0.339);
     transition: all 0.2 linear;
   }
